Changes do Nav Anchor Itens. Aligned to right and expanded width to fix some issues when changing window size.

--- a/starter-code/main.css
+++ b/starter-code/main.css
@@ -36,8 +36,8 @@ nav{
 
 nav div {
   margin-top: 2%;
-  width: 35%;
-  flex-wrap: wrap;
+  width: 100%;
+  text-align: right;
 }
 
 nav a{
